[package]
name = "crazyradio"
version = "0.4.0"
authors = ["Arnaud Taffanel <arnaud@taffanel.org>"]
edition = "2018"
description = "Crazyradio USB dongle driver"
readme = "README.md"
repository = "https://github.com/ataffanel/crazyradio-rs"
license = "MIT"
keywords = ["nrf24", "crazyflie"]
categories = ["hardware-support"]
exclude = [
    ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.1"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2"
flume = { version = "0.12", optional = true, default-features = false }

[dev-dependencies]
indicatif = "0.18.3"
serde_json = "1"
tokio = { version = "1.6.1", features = ["rt", "rt-multi-thread","macros"] }

[features]
serde_support = ["serde"]
shared_radio = ["flume"]
async = ["flume/async"]
packet_capture = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
